k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homiee-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: homiee-api

  template:
    metadata:
      labels:
        app: homiee-api

    spec:
      containers:
      - name: homiee-api
        image: homieeacr123.azurecr.io/homiee-api:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 8080
