k8s/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver

  template:
    metadata:
      labels:
        app: sqlserver

    spec:
      securityContext:
        fsGroup: 10001

      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2022-latest

        ports:
        - containerPort: 1433

        volumeMounts:
        - mountPath: /var/opt/mssql
          name: sql-storage

      volumes:
      - name: sql-storage
        persistentVolumeClaim:
          claimName: sqlserver-pvc
