k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homiee-api

spec:
  selector:
    app: homiee-api

  ports:
  - port: 80
    targetPort: 8080

  type: LoadBalancer
