k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homiee-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - api.suhailaslam.in
    secretName: homiee-api-tls

  rules:
  - host: api.suhailaslam.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homiee-api
            port:
              number: 80
